log
Wed 20 Mar 2024 11:49:22 PM UTC: 
 tests:  0|5
total_score: 0/70
f595a11
Wed 20 Mar 2024 11:53:07 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
de28953
Wed 20 Mar 2024 11:53:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:5: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |     pushback(L, dato);
      |     ^~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
7d1fe39
Wed 20 Mar 2024 11:53:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
f86fc60
Wed 20 Mar 2024 11:55:39 PM UTC: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
c45121a
